# OpenNexus

./: LICENSE  README.md  config.py  config.toml.example  install.sh  main.py  pyproject.toml  requirements.txt
bot/: formatter.py  handlers.py  middleware.py
deploy/: install_service.sh  opennexus.service
docs/: prompt.md
providers/: __init__.py  anthropic.py  base.py  custom.py  groq.py  http_client.py  ollama.py  openai.py  openrouter.py
security/: sanitizer.py  scanner.py
skills/: __init__.py  generator.py  manager.py  skill_generation.json
tools/: __init__.py  search.py
web/: webui.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
