[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opennexus"
version = "1.0.0"
description = "AI assistant for developers and ethical hackers. Telegram-only. Multi-provider."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=20.0,<22.0",
    "httpx>=0.27.0,<1.0",
]

[project.scripts]
opennexus = "main:main"
