[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opennexus"
version = "1.0.0"
description = "AI assistant for developers and ethical hackers. Telegram-only. Multi-provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "providers*", "skills*", "security*"]
